@@ -1,3 +1,8 @@
+2002-09-17  Svein E. Seldal  <Svein.Seldal@solidas.com>
+
+	* config/tc-tic4x.c: Add function declarations and ATTRIBUTE_UNUSED.
+	Convert functions to K&R format.
+
 2002-09-17  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
 
 	* config/tc-mips.c (pdr_seg): Define only for ELF.
